[gd_scene load_steps=8 format=3 uid="uid://bu12fpd4as076"]

[ext_resource type="Script" path="res://Scripts/PlayerController.gd" id="1_q0n55"]
[ext_resource type="PackedScene" uid="uid://crurniob432p0" path="res://Scenes/fists.tscn" id="2_5i74p"]
[ext_resource type="PackedScene" uid="uid://rso2wygpofn2" path="res://Scenes/UI.tscn" id="3_qret7"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qchau"]

[sub_resource type="BoxMesh" id="BoxMesh_vhid6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g33t0"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xinid"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_q0n55")

[node name="VisualMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_qchau")

[node name="MeshInstance3D" type="MeshInstance3D" parent="VisualMesh"]
transform = Transform3D(0.813049, 0, 0, 0, 0.362134, 0, 0, 0, 0.353922, 0, 0.437293, -0.430176)
mesh = SubResource("BoxMesh_vhid6")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_g33t0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_xinid")

[node name="HeadPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, -0.0821319)

[node name="Camera3D" type="Camera3D" parent="HeadPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0951076, 0.166952)
near = 0.001

[node name="GrabCast" type="RayCast3D" parent="HeadPivot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -2, 0)
collision_mask = 32

[node name="PunchCast" type="RayCast3D" parent="HeadPivot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
collision_mask = 4

[node name="Fists" parent="HeadPivot" instance=ExtResource("2_5i74p")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.0196762, 0.213461)

[node name="Human FPS" parent="HeadPivot/Fists" index="0"]
transform = Transform3D(-1, 1.50996e-07, 6.60024e-15, 0, -4.37114e-08, 1, 1.50996e-07, 1, 4.37114e-08, 0, 0, 0)

[node name="Skeleton3D" parent="HeadPivot/Fists/Human FPS" index="0"]
bones/0/position = Vector3(-3.86908e-14, 1.92231e-07, -0.00121665)
bones/0/rotation = Quaternion(0.707107, 5.33851e-08, 5.33851e-08, 0.707107)
bones/1/rotation = Quaternion(-0.0816676, -0.259849, 0.938189, 0.213565)
bones/2/rotation = Quaternion(-0.685585, -0.0602141, 0.0286174, 0.724934)
bones/3/rotation = Quaternion(-0.12187, 0.10771, -0.0133044, 0.986595)
bones/4/rotation = Quaternion(0.0570956, -0.0665678, 0.756197, 0.648441)
bones/5/rotation = Quaternion(-0.0209668, -0.00546572, 0.64245, 0.766021)
bones/6/rotation = Quaternion(0.00490354, -0.00456707, 0.683483, 0.729936)
bones/8/rotation = Quaternion(0.0241184, -0.0222999, 0.678571, 0.7338)
bones/9/rotation = Quaternion(0.000573234, -0.00077435, 0.809027, 0.58777)
bones/10/rotation = Quaternion(0.00197305, -0.00187397, 0.695524, 0.718498)
bones/12/rotation = Quaternion(-0.0143695, 0.0127668, 0.664029, 0.74746)
bones/13/rotation = Quaternion(-0.00050428, 0.000696333, 0.812521, 0.582931)
bones/14/rotation = Quaternion(-0.000196261, 0.000136692, 0.582104, 0.813114)
bones/16/rotation = Quaternion(-0.0546594, 0.0493512, 0.668314, 0.740225)
bones/17/rotation = Quaternion(0.00017519, -0.000232141, 0.802043, 0.597266)
bones/18/rotation = Quaternion(0.000669315, -0.000731616, 0.742746, 0.669573)
bones/20/rotation = Quaternion(-0.363457, -0.060149, 0.194903, 0.909007)
bones/21/rotation = Quaternion(0.488806, -0.110447, 0.19072, 0.844095)
bones/22/rotation = Quaternion(0.276391, -0.0102492, -0.0783156, 0.957794)
bones/24/rotation = Quaternion(-0.0762496, 0.23608, -0.94445, 0.215558)
bones/25/rotation = Quaternion(-0.673087, 0.0597162, -0.0296434, 0.736552)
bones/26/rotation = Quaternion(-0.0105903, 0.00587981, -0.078186, 0.996865)
bones/27/rotation = Quaternion(0.0570956, 0.0665677, -0.756197, 0.648441)
bones/28/rotation = Quaternion(-0.0209674, 0.00546576, -0.642452, 0.76602)
bones/29/rotation = Quaternion(0.00490536, 0.004567, -0.683478, 0.72994)
bones/31/rotation = Quaternion(0.0241185, 0.0222999, -0.678571, 0.7338)
bones/32/rotation = Quaternion(0.000640987, 0.000719359, -0.752525, 0.658563)
bones/33/rotation = Quaternion(0.00197298, 0.00187396, -0.695529, 0.718493)
bones/35/rotation = Quaternion(-0.0143695, -0.0127668, -0.664029, 0.74746)
bones/36/rotation = Quaternion(-0.000548544, -0.0006621, -0.772887, 0.634544)
bones/37/rotation = Quaternion(-0.000196134, -0.000136783, -0.582102, 0.813116)
bones/39/rotation = Quaternion(-0.0532621, -0.0508562, -0.688695, 0.721301)
bones/40/rotation = Quaternion(0.000213211, 0.000197877, -0.684849, 0.728685)
bones/41/rotation = Quaternion(0.000669277, 0.000731588, -0.742744, 0.669575)
bones/43/rotation = Quaternion(-0.371894, -0.0399771, -0.393177, 0.839946)
bones/44/rotation = Quaternion(0.607708, 5.22589e-06, 2.99761e-06, 0.794161)
bones/49/position = Vector3(-0.699632, -0.0087232, -0.000876989)

[node name="BoneAttachment3D" parent="HeadPivot/Fists/Human FPS/Skeleton3D" index="1"]
transform = Transform3D(-0.908778, -0.328571, 0.257222, -0.205594, 0.888982, 0.409196, -0.363115, 0.318985, -0.87544, 0.251789, 0.348576, -0.0953139)

[node name="Beer" parent="HeadPivot/Fists/Human FPS/Skeleton3D/BoneAttachment3D" index="0"]
visible = false

[node name="UI" parent="." instance=ExtResource("3_qret7")]

[editable path="HeadPivot/Fists"]
